tried to fix javascript

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img id="flowa1" src="./Images/flowa.png" alt="flowa">
     <button id="cinnabun"></button>
     <p id="great"></p>
-    <img id="flowa2" src="./Images/flowa.png">
+    <img id="flowa2" src="./Images/flowa.png" alt="flowa2">
     <script src="script.js"></script>
   </body>
 </html>
