tried to fix again

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <p id="need"></p>
     <img id="flowa1" src="./Images/flowa.png" alt="flowa">
     <button id="cinnabun"></button>
+    <br>
+    <button id="what">How many points do you still need?</button>
     <p id="great"></p>
     <img id="flowa2" src="./Images/flowa.png" alt="flowa2">
     <script src="script.js"></script>
